# Salary-Agent-Ver2

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: Plan_Cong_viec_tai_tao_repo.md
template/agent/: agent.py  histories.py  prompts.py
template/agent/tools/: USE_MANUAL.md  caculator.py  calculator.py  search.py
template/configs/: environments.py
template/router/v1/: ai.py  import_file.py
template/schemas/: model.py  tweets.py
template/services/: aws_service.py  formula_validator.py  portgre_services.py  read_excel_xlsx.py  result_validator.py
