[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
fastapi = "^0.112.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.7.1"
apscheduler = "^3.11.0"
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langgraph = "^0.2.62"
langchain-community = "^0.3.14"
langchain-google-vertexai = "^2.0.0"
google-cloud-aiplatform = "^1.70.0"
python = "^3.11"
redis = "^5.0.0"
cachetools = "^5.3.0"
APScheduler = "^3.11.0"
googlesearch-python = "^1.3.0"
python-dotenv = "^1.0.0"
aiofiles = "^24.1.0"
boto3 = "1.42.23"
unidecode = "^1.3.0"
psycopg2-binary = "2.9.11"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
